# turbocrunch

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  backend_test.go  demo.tape  go.mod  go.sum  main.go  math_wrapper.go  moc_constants.cpp  moc_evaluator.cpp  moc_functions.cpp  verify_build.go
bridge/: bridge.cpp  bridge.go  bridge.h
cmd/turbocrunch/: main.go  tui_test.go
pkg/backend/: backend_test.go  formula_test.go  formulas.go  math_wrapper.go  math_wrapper_test.go  parser.go
pkg/bridge/: bridge.cpp  bridge.go  bridge.h
